# pydngconverter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  release-please-config.json  setup.cfg  setup.py  tox.ini
.chglog/: config.yml
.github/: ISSUE_TEMPLATE.md  renovate.json5
.github/workflows/: changelog.yml  main.yml  publish.yml  release.yml
docs/: .buildinfo  conf.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: pydngconverter.compat.html  pydngconverter.dngconverter.html  pydngconverter.flags.html  pydngconverter.html  pydngconverter.main.html  pydngconverter.utils.html
docs/_sources/: index.rst.txt  modules.rst.txt
docs/_sources/_autosummary/: pydngconverter.compat.rst.txt  pydngconverter.flags.rst.txt  pydngconverter.main.rst.txt  pydngconverter.rst.txt  pydngconverter.utils.rst.txt
docsrc/: conf.py  index.rst  modules.rst
docsrc/_autosummary/: pydngconverter.dngconverter.rst  pydngconverter.flags.rst  pydngconverter.main.rst  pydngconverter.utils.rst
pydngconverter/: __init__.py  compat.py  dngconverter.py  flags.py  main.py  utils.py
tests/: conftest.py  test_compat.py  test_pydngconverter.py
