[tool.poetry]
name = "pydngconverter"
version = "0.3.0"
description = "Python Interface for the Adobe's DNG Converter"
authors = ["Braden Mars <bradenmars@bradenmars.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BradenM/pydngconverter"
repository = "https://github.com/BradenM/pydngconverter"
documentation = "https://bradenm.github.io/pydngconverter"
keywords = ["pydng", "dng", "dngconverter", "raw", "api"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
]
include = [
    { path = "tests", format = "sdist" },
    "README.md",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "~5.9"
Wand = "~0.6"
rich = "^13.3.1"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.0.0"
isort = "^5.7.0"
black = "^23.1.0"
pytest = "^7.0.0"
pytest-coverage = "^0.0"
pytest-mock = "^3.5.1"
pytest-asyncio = "^0.20.0"
mypy = "^1.0.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"
ruff = "^0.0.254"


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-autodoc-typehints = "^1.11.1"
recommonmark = "^0.7.1"
sphinx_rtd_theme = "^1.0.0"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    # "D",  # pydocstyle
    "UP", # pyupgrade
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "PT",  # flake8-pytest-style
    "RUF" # ruff specific rules
]
ignore = [
    "E501", # line too long - let black handle.
    "C901", # too complex
    "C408", # rewrite as literal; makes comprehensions harder sometimes imo
]
line-length = 100
target-version = 'py38'
src = ['pydngconverter']

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
src_paths = ["pydngconverter"]
line_length = 100
honor_noqa = true
length_sort = true
skip_glob = ["pydngconverter/lib/**/*"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-ra -vv"

[tool.converage.run]
source = "pydngconverter"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    'class .*\bProtocol\):',
    'raise NotImplementedError',
    'raise AssertionError',
    'def __repr__',
    'noqa',
    '@(abc\.)?abstractmethod',
    'pragma: no cover'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
